--- a/bacondate.html
+++ b/bacondate.html
@@ -18,10 +18,9 @@
   <body>
     <div id="mainNavbar">
       <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo" src="./img/121054.png" alt="" />
         </a>
-
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -54,8 +53,10 @@
                 Starters
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Starter1</a>
-                <a class="dropdown-item" href="#">Starter2</a>
+                <a class="dropdown-item" href="bacondate.html">Bacon & Dates</a>
+                <a class="dropdown-item" href="mushrooms.html"
+                  >Stuffed Mushrooms</a
+                >
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -71,8 +72,12 @@
                 Mains
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Main1</a>
-                <a class="dropdown-item" href="#">Main2</a>
+                <a class="dropdown-item" href="rigatonigenovese.html"
+                  >Rigatoni alla genovese</a
+                >
+                <a class="dropdown-item" href="juicychicken.html"
+                  >Juicy roasted chicken</a
+                >
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -88,8 +93,12 @@
                 Desserts
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Dessert1</a>
-                <a class="dropdown-item" href="#">Dessert2</a>
+                <a class="dropdown-item" href="cheesecake.html"
+                  >Cheesecake Bites</a
+                >
+                <a class="dropdown-item" href="cremerulete.html"
+                  >creme brulee</a
+                >
               </div>
             </li>
             <li class="nav-item">
