--- a/cremebrulee.html
+++ b/cremebrulee.html
@@ -134,39 +134,35 @@
           <div class="col-lg-6 col-md-6">
             <section class="method">
               <h4>Method</h4>
-              <ul>
-                <li>Step 1</li>
-                <p>Preheat oven to 350 degrees F (175 degrees C).</p>
-                <li>Step 2</li>
-                <p>
-                  Whisk 3 tablespoons sugar and cream in a microwave-safe bowl
-                  until well combined; heat the mixture in microwave until warm,
-                  1 to 2 minutes, and whisk again to dissolve sugar. Whisk in
-                  egg yolks and vanilla extract until smooth.
-                </p>
-                <li>Step 3</li>
-                <p>
-                  Pour cream mixture into 2 ramekins. Set ramekins into a
-                  roasting pan and pour in enough hot water to reach halfway up
-                  the sides of the ramekins.
-                </p>
-                <li>Step 4</li>
-                <p>
-                  Bake in the preheated oven until creme desserts are set but
-                  still slightly jiggly when shaken, about 50 minutes. Remove
-                  ramekins from hot water and chill in refrigerator until cold,
-                  at least 2 hours.
-                </p>
-                <li>Step 5</li>
-                <p>
-                  Sprinkle 1 tablespoon of sugar evenly over the top of each
-                  dessert. Use a kitchen torch to lightly toast and melt the
-                  sugar topping until brown and bubbly, about 30 seconds. Let
-                  the sugar topping cool before serving. To serve, use a spoon
-                  to crack the crisp sugar open to reveal the creamy dessert
-                  underneath.
-                </p>
-              </ul>
+              <br /><br />
+              <p>
+                <b>Step 1</b>
+                Preheat oven to 350 degrees F (175 degrees C).<br /><br />
+
+                <b>Step 2</b>
+                Whisk 3 tablespoons sugar and cream in a microwave-safe bowl
+                until well combined; heat the mixture in microwave until warm, 1
+                to 2 minutes, and whisk again to dissolve sugar. Whisk in egg
+                yolks and vanilla extract until smooth.<br /><br />
+
+                <b>Step 3</b>
+                Pour cream mixture into 2 ramekins. Set ramekins into a roasting
+                pan and pour in enough hot water to reach halfway up the sides
+                of the ramekins.
+                <br /><br />
+                <b>Step 4</b>
+                Bake in the preheated oven until creme desserts are set but
+                still slightly jiggly when shaken, about 50 minutes. Remove
+                ramekins from hot water and chill in refrigerator until cold, at
+                least 2 hours.
+                <br /><br />
+                <b>Step 5</b>
+                Sprinkle 1 tablespoon of sugar evenly over the top of each
+                dessert. Use a kitchen torch to lightly toast and melt the sugar
+                topping until brown and bubbly, about 30 seconds. Let the sugar
+                topping cool before serving. To serve, use a spoon to crack the
+                crisp sugar open to reveal the creamy dessert underneath.
+              </p>
             </section>
           </div>
         </div>
