added right picture for old fashioned

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="recipe-container col-lg-4">
             <a href="drinks.html">
               <div class="img-container">
-                <img src="./img/Classic-Old-Fashioned.webp" alt="food" />
+                <img src="./img/old_fashioned.jpg" alt="food" />
               </div>
               <h2>Classic Old Fashioned</h2>
             </a>
