--- a/drinks.html
+++ b/drinks.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Drinks</title>
   </head>
   <body>
     <div id="mainNavbar">
