--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Drinks</a>
+              <a class="nav-link" href="drinks.html">Drinks</a>
             </li>
           </ul>
         </div>
