--- a/drinks.html
+++ b/drinks.html
@@ -33,7 +33,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -99,8 +99,8 @@
                 >
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Drinks</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="drinks.html">Drinks</a>
             </li>
           </ul>
         </div>
