--- a/mushrooms.html
+++ b/mushrooms.html
@@ -35,12 +35,12 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown active">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -102,7 +102,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Drinks</a>
+              <a class="nav-link" href="drinks.html">Drinks</a>
             </li>
           </ul>
         </div>
