--- a/juicychicken.html
+++ b/juicychicken.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/recipe.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Juicy Chicken</title>
   </head>
 
   <body>
