added share button to all html-pages + added styling of button in styles.css

--- a/juicychicken.html
+++ b/juicychicken.html
@@ -167,6 +167,15 @@
           </div>
         </div>
       </div>
+      <div class="button-box">
+        <button
+          id="share-button"
+          class="btn btn-dark"
+          onclick="alert('This button does not work properly, yet!')"
+        >
+          share me!
+        </button>
+      </div>
     </main>
 
     <script
