--- a/cheesecake.html
+++ b/cheesecake.html
@@ -112,7 +112,11 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img id="pic" src="img/cheesecake.jpg" alt="" />
+          <img
+            id="pic"
+            src="img/cheesecake.jpg"
+            alt="Chocolate Peppermint Cheesecake Bites"
+          />
           <div class="col-lg-10 justify-content-center row align-items-center">
             <h3 id="head">Chocolate Peppermint Cheesecake Bites</h3>
           </div>
@@ -177,6 +181,15 @@
             </section>
           </div>
         </div>
+      </div>
+      <div class="button-box">
+        <button
+          id="share-button"
+          class="btn btn-dark"
+          onclick="alert('This button does not work properly, yet!')"
+        >
+          share me!
+        </button>
       </div>
     </main>
 
