--- a/cremebrulee.html
+++ b/cremebrulee.html
@@ -112,7 +112,7 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img id="pic" src="./img/brulee.jpg" alt="" />
+          <img id="pic" src="./img/brulee.jpg" alt="Creme Brulee" />
           <div class="col-lg-10 justify-content-center row align-items-center">
             <h3 id="head">Creme Brulee</h3>
           </div>
@@ -166,6 +166,15 @@
             </section>
           </div>
         </div>
+      </div>
+      <div class="button-box">
+        <button
+          id="share-button"
+          class="btn btn-dark"
+          onclick="alert('This button does not work properly, yet!')"
+        >
+          share me!
+        </button>
       </div>
     </main>
 
